--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+pandas==2.2.2
 spacy==3.7.0
-scikit-learn==1.2.0
-transformers==4.30.0
-torch==2.0.0
-pandas==1.5.0
+scikit-learn==1.4.2
+transformers==4.39.3
+torch==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+seaborn==0.13.2
+tokenizers==0.15.2
+tqdm==4.66.2
